# cog

./: Cargo.toml  LICENSE
crates/bytecode/: Cargo.toml
crates/bytecode/src/: lib.rs  opcode.rs  types.rs  values.rs
crates/bytecode/tests/: value_roundtrip.rs
src/: main.rs
