[workspace]
members = ["crates/bytecode"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[workspace.dependencies]
thiserror = "2.0.17"
anyhow = "1.0.100"

[package]
name = "cog"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
